--- a/backend/package.json
+++ b/backend/package.json
@@ -5,9 +5,12 @@
   "type": "module",
   "scripts": {
     "test": "NODE_OPTIONS=--experimental-vm-modules jest",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "start": "nodemon src/index.js"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.2",
     "react": "^18.2.0",
@@ -29,6 +32,7 @@
     "jest": "^29.7.0",
     "lint-staged": "^15.1.0",
     "mongodb-memory-server": "^9.1.1",
+    "nodemon": "^3.0.2",
     "prettier": "^3.1.0",
     "vite": "^5.0.0"
   },
